fix text overflow in story card and marker popup

--- a/rails/app/assets/stylesheets/components/card.scss
+++ b/rails/app/assets/stylesheets/components/card.scss
@@ -160,8 +160,12 @@ $el-shadow: 0 1px 4px $lighter-gray;
           background-color: $light-gray;
         }
       }
+      .title {
+        overflow-wrap: break-word;
+      }
       p {
         font-size: 0.85rem;
+        overflow-wrap: break-word;
         line-height: 1.25;
         margin-top: 1rem;
         @include ui-font;
